--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-    "name": "elevenlabs",
-    "version": "0.7.0",
+    "browser": {
+        "child_process": false
+    },
+    "name": "elevenlabs-js",
+    "version": "0.20.0",
     "private": false,
     "repository": "https://github.com/elevenlabs/elevenlabs-js",
     "license": "MIT",
@@ -14,8 +17,6 @@
     },
     "dependencies": {
         "child_process": "^1.0.2",
-        "command-exists": "^1.2.9",
-        "execa": "^5.1.1",
         "form-data": "4.0.0",
         "form-data-encoder": "^4.0.2",
         "formdata-node": "^6.0.3",
@@ -24,7 +25,6 @@
         "url-join": "4.0.1"
     },
     "devDependencies": {
-        "@types/command-exists": "^1.2.3",
         "@types/jest": "^29.5.5",
         "@types/node": "17.0.33",
         "@types/node-fetch": "2.6.9",
